# BusFactorPy

./: .busfactorignore  .coveragerc  .gitignore  README.md  coverage.xml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
busfactorpy/: __init__.py  cli.py  main.py
busfactorpy/core/: analyzer.py  calculator.py  ignore.py  miner.py  trend.py
busfactorpy/output/: reporter.py  visualizer.py
tests/unit/: __init__.py  test_analyzer.py  test_calculator.py  test_cli.py  test_directory_grouping.py  test_ignore.py  test_miner.py  test_trend_feature.py
